Complete Python Tutorial for beginners
Here is the complete python tutorial for beginners. Anyone who has never code before but carry  enough motivation can get benifit from this tutorial. Simplicity for learning was specifically considered while making this project.  Introduction to some important python libraries is also given such as Pandas and Numpy.
Requirements:
1) You should have jupyter notebook installed, if not here is the link to get started=>  (https://www.anaconda.com/products/individual#Downloads).

--- a/Python Tutorial.ipynb
+++ b/Python Tutorial.ipynb
@@ -149,7 +149,7 @@
    "source": [
     "num_1 = 3049586721.2348506                                                   #float type variable\n",
     "num_2 = 506978243                                                            #integer type variable\n",
-    "description = \"My name is *** and i am learning python for machine learning\" #string type variable\n",
+    "description = \"My name is *** and i am learning python for machine learning.\" #string type variable\n",
     "#print all values\n",
     "print (\"Floating number:\", num_1)\n",
     "print (\"Integer number:\", num_2)\n",
